[package]
name = "mtransaction"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "mtx-server"
path = "server/main.rs"

[dependencies]
async-stream = "0.3"
futures = { version = "0.3", default-features = false, features = ["alloc"] }
prost = "0.11"
tokio = { version = "1.0", features = [ "rt-multi-thread", "time", "fs", "macros", "net",] }
tokio-stream = { version = "0.1", features = ["net"] }
tonic = { version = "0.8.0", features = ["tls", "gzip"] }
tower = { version = "0.4" }
h2 = "0.3"
log = "0.4.14"
env_logger = "0.9.0"
jsonrpc-core = "18.0.0"
jsonrpc-derive = "18.0.0"
jsonrpc-http-server = "18.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
serde_json = "1.0"
rand = "0.8.5"
structopt = "0.3.21"

[build-dependencies]
tonic-build = { version = "0.8.0", features = ["prost"] }
