[package]
name = "mtransaction"
version = "0.2.2"
edition = "2021"

[[bin]]
name = "mtx-server"
path = "server/main.rs"

[[bin]]
name = "mtx-client"
path = "client/main.rs"

[dependencies]
lazy_static = "1.4.0"
openssl = { version = "0.10" }
jwt = { version = "0.16.0", features = ["openssl"]}
async-stream = "0.3"
futures = { version = "0.3", default-features = false, features = ["alloc"] }
prost = "0.11"
tokio = { version = "1.24", features = [ "rt-multi-thread", "time", "fs", "macros", "net",] }
tokio-stream = { version = "0.1", features = ["net"] }
tonic = { version = "0.8.0", features = ["tls", "gzip"] }
tower = { version = "0.4" }
h2 = "0.3"
log = "0.4.14"
env_logger = "0.9.0"
jsonrpc-core-client = "18.0.0"
jsonrpc-core = "18.0.0"
jsonrpc-derive = "18.0.0"
jsonrpc-http-server = "18.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
serde_json = "1.0"
rand = "0.8.5"
structopt = "0.3.21"
solana-sdk = "1.14.5"
solana-client = "1.14.5"
solana-transaction-status = "1.14.5"
x509-parser = "0.14.0"
prometheus = "0.13.2"
warp = "0.3"
base64 = "0.13.0"
bincode = "1.3.3"
enum_dispatch = "0.3.8"
memory-stats = "1.1.0"

[build-dependencies]
tonic-build = { version = "0.8.0", features = ["prost"] }
